Finish login and registration logic