@@ -7,7 +7,6 @@ import hr.algebra.dao.models.User;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.Optional;
 
 public class UserRepositoryImpl extends Base<User> implements UserRepository {
 
@@ -41,13 +40,12 @@ public class UserRepositoryImpl extends Base<User> implements UserRepository {
     }
 
     @Override
-    public Optional<User> getByUsername(String username) throws SQLException {
-        List<User> users = executeQuery(
-                "{call p_User_GetByUsername(?)}",
-                statement -> statement.setString(1, username));
+    public User getByUsername(String username) throws SQLException {
+        List<User> user = executeQuery(
+            "{call p_User_GetByUsername(?)}",
+            statement -> statement.setString(1, username)
+        );
 
-        return users.isEmpty() ?
-                Optional.empty() :
-                Optional.of(users.get(0));
+        return !user.isEmpty() ? user.getFirst() : null;
     }
 }
